# backend/docs/swagger.json
@@ -443,163 +443,6 @@
                 }
             }
         },
-        "/posts/checkliked/{user_id}_{post_id}": {
-            "get": {
-                "description": "Check if a user has liked a post by: id",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "posts"
-                ],
-                "summary": "Check if a user has liked a post by: id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Insert your access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "Post ID",
-                        "name": "post_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/posts.LikedJson"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/posts/likes/{user_id}_{post_id}": {
-            "post": {
-                "description": "Like a post by: id",
-                "tags": [
-                    "posts"
-                ],
-                "summary": "Like a post by: id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Insert your access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "Post ID",
-                        "name": "post_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            },
-            "delete": {
-                "description": "Unlike a post by: id",
-                "tags": [
-                    "posts"
-                ],
-                "summary": "Unlike a post by: id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "default": "Bearer \u003cAdd access token here\u003e",
-                        "description": "Insert your access token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "User ID",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "Post ID",
-                        "name": "post_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
         "/posts/{id}": {
             "get": {
                 "description": "Read a single post by: id",
@@ -766,7 +609,7 @@
                         "type": "string",
                         "format": "uuid",
                         "description": "Post ID",
-                        "name": "post_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -790,16 +633,16 @@
                 }
             }
         },
-        "/users/checkfollow/{follower_id}_{followed_id}": {
+        "/posts/{id}/likes/check/{user_id}": {
             "get": {
-                "description": "Check if a user follows another user by: id",
+                "description": "Check if a user has liked a post by: id",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "posts"
                 ],
-                "summary": "Check if a user follows another user by: id",
+                "summary": "Check if a user has liked a post by: id",
                 "parameters": [
                     {
                         "type": "string",
@@ -812,16 +655,16 @@
                     {
                         "type": "string",
                         "format": "uuid",
-                        "description": "Follower ID",
-                        "name": "follower_id",
+                        "description": "Post ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "format": "uuid",
-                        "description": "Followed ID",
-                        "name": "followed_id",
+                        "description": "User ID",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -830,7 +673,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/users.FollowsJson"
+                            "$ref": "#/definitions/posts.LikedJson"
                         }
                     },
                     "400": {
@@ -845,13 +688,13 @@
                 }
             }
         },
-        "/users/follow/{follower_id}_{followed_id}": {
+        "/posts/{id}/likes/{user_id}": {
             "post": {
-                "description": "Follow a user by: id",
+                "description": "Like a post by: id",
                 "tags": [
-                    "users"
+                    "posts"
                 ],
-                "summary": "Follow a user by: id",
+                "summary": "Like a post by: id",
                 "parameters": [
                     {
                         "type": "string",
@@ -864,16 +707,16 @@
                     {
                         "type": "string",
                         "format": "uuid",
-                        "description": "Follower ID",
-                        "name": "follower_id",
+                        "description": "Post ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "format": "uuid",
-                        "description": "Followed ID",
-                        "name": "followed_id",
+                        "description": "User ID",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -897,11 +740,11 @@
                 }
             },
             "delete": {
-                "description": "Unfollow a user by: id",
+                "description": "Unlike a post by: id",
                 "tags": [
-                    "users"
+                    "posts"
                 ],
-                "summary": "Unfollow a user by: id",
+                "summary": "Unlike a post by: id",
                 "parameters": [
                     {
                         "type": "string",
@@ -914,16 +757,16 @@
                     {
                         "type": "string",
                         "format": "uuid",
-                        "description": "Follower ID",
-                        "name": "follower_id",
+                        "description": "Post ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "format": "uuid",
-                        "description": "Followed ID",
-                        "name": "followed_id",
+                        "description": "User ID",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
@@ -993,16 +836,16 @@
                 }
             }
         },
-        "/users/{id_list}": {
+        "/users/{id}": {
             "get": {
-                "description": "Read a list of users by: id_list",
+                "description": "Read a single user by: id",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "users"
                 ],
-                "summary": "Read a list of users by: id_list",
+                "summary": "Read a single user by: id",
                 "parameters": [
                     {
                         "type": "string",
@@ -1014,8 +857,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "User ID List",
-                        "name": "id_list",
+                        "description": "User ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -1024,7 +867,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/shared.Users"
+                            "$ref": "#/definitions/shared.User"
                         }
                     },
                     "400": {
@@ -1037,9 +880,7 @@
                         "description": "Internal Server Error"
                     }
                 }
-            }
-        },
-        "/users/{id}": {
+            },
             "put": {
                 "description": "Update a single user by: id",
                 "consumes": [
@@ -1224,6 +1065,163 @@
                     },
                     "401": {
                         "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/users/{id}/followers/check/{follower_id}": {
+            "get": {
+                "description": "Check if a user follows another user by: id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Check if a user follows another user by: id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Followed ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Follower ID",
+                        "name": "follower_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/users.FollowsJson"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/users/{id}/followers/{follower_id}": {
+            "post": {
+                "description": "Follow a user by: id",
+                "tags": [
+                    "users"
+                ],
+                "summary": "Follow a user by: id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Followed ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Follower ID",
+                        "name": "follower_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Unfollow a user by: id",
+                "tags": [
+                    "users"
+                ],
+                "summary": "Unfollow a user by: id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Followed ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Follower ID",
+                        "name": "follower_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
                     },
                     "500": {
                         "description": "Internal Server Error"
