# backend/internal/api/user_handler.go
@@ -5,7 +5,6 @@ import (
 	"fmt"
 	"net/http"
 	"strconv"
-	"strings"
 	"time"
 
 	"github.com/go-chi/chi/v5"
@@ -24,80 +23,21 @@ type UserHandler struct {
 func (h UserHandler) Routes() chi.Router {
 	r := chi.NewRouter()
 
-	r.Get("/{id_list}", h.GetUsers)                                      // GET /api/v1/users/{id_list} - Read a list of users by: id_list
-	r.Get("/search/{search_term}", h.SearchUsers)                        // GET /api/v1/users/search/{search_term} - Read a list of users by: search_term
-	r.Get("/{id}/posts", h.ListPostsFromUser)                            // GET /api/v1/users/{id}/posts?limit=10&cursor=base64string - Read a list of posts by: user_id using pagination
-	r.Put("/{id}", h.UpdateUser)                                         // PUT /api/v1/users/{id} - Update a single user by: id
-	r.Delete("/{id}", h.DeleteUser)                                      // DELETE /api/v1/users/{id} - Delete a single user by: id
-	r.Post("/follow/{follower_id}_{followed_id}", h.Follow)              // POST /api/v1/users/follow/{follower_id}_{followed_id} - Follow a user by: id
-	r.Delete("/follow/{follower_id}_{followed_id}", h.Unfollow)          // DELETE /api/v1/users/follow/{follower_id}_{followed_id} - Unfollow a user by: id
-	r.Get("/checkfollow/{follower_id}_{followed_id}", h.UserFollowsUser) // GET /api/v1/users/checkfollow/{follower_id}_{followed_id} - Check if a user follows another user by: id
-	r.Get("/{id}/followers", h.GetFollowers)                             // GET /api/v1/users/{id}/followers - Read a list of who follows a user by: user_id
-	r.Get("/{id}/followed", h.GetFollowed)                               // GET /api/v1/users/{id}/followed - Read a list of who a user follows by: user_id
+	r.Get("/search/{search_term}", h.SearchUsers) // GET /api/v1/users/search/{search_term} - Read a list of users by: search_term
+
+	r.Route("/{id}", func(r chi.Router) {
+		r.Get("/", h.GetUser)                                      // GET /api/v1/users/{id} - Read a single user by: id
+		r.Get("/posts", h.ListPostsFromUser)                       // GET /api/v1/users/{id}/posts?limit=10&cursor=base64string - Read a list of posts by: user_id using pagination
+		r.Put("/", h.UpdateUser)                                   // PUT /api/v1/users/{id} - Update a single user by: id
+		r.Delete("/", h.DeleteUser)                                // DELETE /api/v1/users/{id} - Delete a single user by: id
+		r.Post("/followers/{follower_id}", h.Follow)               // POST /api/v1/users/{id}/followers/{follower_id} - Follow a user by: id
+		r.Get("/followers", h.GetFollowers)                        // GET /api/v1/users/{id}/followers - Read a list of who follows a user by: user_id
+		r.Get("/followed", h.GetFollowed)                          // GET /api/v1/users/{id}/followed - Read a list of who a user follows by: user_id
+		r.Delete("/followers/{follower_id}", h.Unfollow)           // DELETE /api/v1/users/{id}/followers/{follower_id} - Unfollow a user by: id
+		r.Get("/followers/check/{follower_id}", h.UserFollowsUser) // GET /api/v1/users/{id}/followers/check/{follower_id} - Check if a user follows another user by: id
+	})
 
 	return r
-}
-
-// GetUsers     godoc
-// @Summary     Read a list of users by: id_list
-// @Description Read a list of users by: id_list
-// @Tags        users
-// @Produce     json
-// @Param       Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
-// @Param       id_list path string true "User ID List"
-// @Success     200 {object} shared.Users
-// @Failure     400
-// @Failure     401
-// @Failure     500
-// @Router      /users/{id_list} [get]
-func (h UserHandler) GetUsers(w http.ResponseWriter, r *http.Request) {
-	logger.ServerLogger.Info(fmt.Sprintf("new request: get %s", r.URL))
-
-	authUser := auth.ForContext(r.Context())
-	if authUser == nil {
-		err := fmt.Errorf("access denied")
-
-		logger.ServerLogger.Warn(err.Error())
-
-		http.Error(w, err.Error(), http.StatusUnauthorized)
-		return
-	}
-
-	idListOG := chi.URLParam(r, "id_list")
-	idListStr := strings.Split(idListOG, "_")
-
-	var idList []uuid.UUID
-	for _, id := range idListStr {
-		userId, err := uuid.Parse(id)
-		if err != nil {
-			logger.ServerLogger.Error(err.Error())
-
-			http.Error(w, "invalid user id", http.StatusBadRequest)
-			return
-		}
-
-		idList = append(idList, userId)
-	}
-
-	users, err := h.Usecase.Get(r.Context(), idList)
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	response, err := json.Marshal(users)
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	w.Write(response)
 }
 
 // SearchUsers  godoc
@@ -136,6 +76,61 @@ func (h UserHandler) SearchUsers(w http.ResponseWriter, r *http.Request) {
 	}
 
 	response, err := json.Marshal(users)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(response)
+}
+
+// GetUser      godoc
+// @Summary     Read a single user by: id
+// @Description Read a single user by: id
+// @Tags        users
+// @Produce     json
+// @Param       Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param       id path string true "User ID"
+// @Success     200 {object} shared.User
+// @Failure     400
+// @Failure     401
+// @Failure     500
+// @Router      /users/{id} [get]
+func (h UserHandler) GetUser(w http.ResponseWriter, r *http.Request) {
+	logger.ServerLogger.Info(fmt.Sprintf("new request: get %s", r.URL))
+
+	authUser := auth.ForContext(r.Context())
+	if authUser == nil {
+		err := fmt.Errorf("access denied")
+
+		logger.ServerLogger.Warn(err.Error())
+
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	id := chi.URLParam(r, "id")
+	userId, err := uuid.Parse(id)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid user id", http.StatusBadRequest)
+		return
+	}
+
+	user, err := h.Usecase.Get(r.Context(), userId)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	response, err := json.Marshal(user)
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
@@ -358,14 +353,14 @@ func (h UserHandler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 // @Description Follow a user by: id
 // @Tags        users
 // @Param       Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param       id path string true "Followed ID" Format(uuid)
 // @Param       follower_id path string true "Follower ID" Format(uuid)
-// @Param       followed_id path string true "Followed ID" Format(uuid)
 // @Success     200
 // @Failure     400
 // @Failure     401
 // @Failure     403
 // @Failure     500
-// @Router      /users/follow/{follower_id}_{followed_id} [post]
+// @Router      /users/{id}/followers/{follower_id} [post]
 func (h UserHandler) Follow(w http.ResponseWriter, r *http.Request) {
 	logger.ServerLogger.Info(fmt.Sprintf("new request: post %s", r.URL))
 
@@ -396,7 +391,7 @@ func (h UserHandler) Follow(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	followedId, err := uuid.Parse(chi.URLParam(r, "followed_id"))
+	followedId, err := uuid.Parse(chi.URLParam(r, "id"))
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
@@ -413,129 +408,6 @@ func (h UserHandler) Follow(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusOK)
-}
-
-// Unfollow     godoc
-// @Summary     Unfollow a user by: id
-// @Description Unfollow a user by: id
-// @Tags        users
-// @Param       Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
-// @Param       follower_id path string true "Follower ID" Format(uuid)
-// @Param       followed_id path string true "Followed ID" Format(uuid)
-// @Success     200
-// @Failure     400
-// @Failure     401
-// @Failure     403
-// @Failure     500
-// @Router      /users/follow/{follower_id}_{followed_id} [delete]
-func (h UserHandler) Unfollow(w http.ResponseWriter, r *http.Request) {
-	logger.ServerLogger.Info(fmt.Sprintf("new request: delete %s", r.URL))
-
-	authUser := auth.ForContext(r.Context())
-	if authUser == nil {
-		err := fmt.Errorf("access denied")
-
-		logger.ServerLogger.Warn(err.Error())
-
-		http.Error(w, err.Error(), http.StatusUnauthorized)
-		return
-	}
-
-	followerId, err := uuid.Parse(chi.URLParam(r, "follower_id"))
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, "invalid user id", http.StatusBadRequest)
-		return
-	}
-	followedId, err := uuid.Parse(chi.URLParam(r, "followed_id"))
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, "invalid user id", http.StatusBadRequest)
-		return
-	}
-
-	if authUser.ID != followerId {
-		err := fmt.Errorf("forbidden unfollow attempt from user: %v", authUser.ID)
-
-		logger.ServerLogger.Warn(err.Error())
-
-		http.Error(w, err.Error(), http.StatusForbidden)
-		return
-	}
-
-	err = h.Usecase.Unfollow(r.Context(), followerId, followedId)
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.WriteHeader(http.StatusOK)
-}
-
-// UserFollowsUser godoc
-// @Summary        Check if a user follows another user by: id
-// @Description    Check if a user follows another user by: id
-// @Tags           users
-// @Produce        json
-// @Param          Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
-// @Param          follower_id path string true "Follower ID" Format(uuid)
-// @Param          followed_id path string true "Followed ID" Format(uuid)
-// @Success        200 {object} users.FollowsJson
-// @Failure        400
-// @Failure        401
-// @Failure        500
-// @Router         /users/checkfollow/{follower_id}_{followed_id} [get]
-func (h UserHandler) UserFollowsUser(w http.ResponseWriter, r *http.Request) {
-	logger.ServerLogger.Info(fmt.Sprintf("new request: get %s", r.URL))
-
-	authUser := auth.ForContext(r.Context())
-	if authUser == nil {
-		err := fmt.Errorf("access denied")
-
-		logger.ServerLogger.Warn(err.Error())
-
-		http.Error(w, err.Error(), http.StatusUnauthorized)
-		return
-	}
-
-	followerId, err := uuid.Parse(chi.URLParam(r, "follower_id"))
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, "invalid user id", http.StatusBadRequest)
-		return
-	}
-	followedId, err := uuid.Parse(chi.URLParam(r, "followed_id"))
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, "invalid user id", http.StatusBadRequest)
-		return
-	}
-
-	follows, err := h.Usecase.UserFollowsUser(r.Context(), followerId, followedId)
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	response, err := json.Marshal(users.FollowsJson{Follows: follows})
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	w.Write(response)
 }
 
 // GetFollowers godoc
@@ -636,6 +508,129 @@ func (h UserHandler) GetFollowed(w http.ResponseWriter, r *http.Request) {
 	}
 
 	response, err := json.Marshal(followed)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(response)
+}
+
+// Unfollow     godoc
+// @Summary     Unfollow a user by: id
+// @Description Unfollow a user by: id
+// @Tags        users
+// @Param       Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param       id path string true "Followed ID" Format(uuid)
+// @Param       follower_id path string true "Follower ID" Format(uuid)
+// @Success     200
+// @Failure     400
+// @Failure     401
+// @Failure     403
+// @Failure     500
+// @Router      /users/{id}/followers/{follower_id} [delete]
+func (h UserHandler) Unfollow(w http.ResponseWriter, r *http.Request) {
+	logger.ServerLogger.Info(fmt.Sprintf("new request: delete %s", r.URL))
+
+	authUser := auth.ForContext(r.Context())
+	if authUser == nil {
+		err := fmt.Errorf("access denied")
+
+		logger.ServerLogger.Warn(err.Error())
+
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	followerId, err := uuid.Parse(chi.URLParam(r, "follower_id"))
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid user id", http.StatusBadRequest)
+		return
+	}
+	followedId, err := uuid.Parse(chi.URLParam(r, "id"))
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid user id", http.StatusBadRequest)
+		return
+	}
+
+	if authUser.ID != followerId {
+		err := fmt.Errorf("forbidden unfollow attempt from user: %v", authUser.ID)
+
+		logger.ServerLogger.Warn(err.Error())
+
+		http.Error(w, err.Error(), http.StatusForbidden)
+		return
+	}
+
+	err = h.Usecase.Unfollow(r.Context(), followerId, followedId)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+// UserFollowsUser godoc
+// @Summary        Check if a user follows another user by: id
+// @Description    Check if a user follows another user by: id
+// @Tags           users
+// @Produce        json
+// @Param          Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param          id path string true "Followed ID" Format(uuid)
+// @Param          follower_id path string true "Follower ID" Format(uuid)
+// @Success        200 {object} users.FollowsJson
+// @Failure        400
+// @Failure        401
+// @Failure        500
+// @Router         /users/{id}/followers/check/{follower_id} [get]
+func (h UserHandler) UserFollowsUser(w http.ResponseWriter, r *http.Request) {
+	logger.ServerLogger.Info(fmt.Sprintf("new request: get %s", r.URL))
+
+	authUser := auth.ForContext(r.Context())
+	if authUser == nil {
+		err := fmt.Errorf("access denied")
+
+		logger.ServerLogger.Warn(err.Error())
+
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	followerId, err := uuid.Parse(chi.URLParam(r, "follower_id"))
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid user id", http.StatusBadRequest)
+		return
+	}
+	followedId, err := uuid.Parse(chi.URLParam(r, "id"))
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid user id", http.StatusBadRequest)
+		return
+	}
+
+	follows, err := h.Usecase.UserFollowsUser(r.Context(), followerId, followedId)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	response, err := json.Marshal(users.FollowsJson{Follows: follows})
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
